Bug 472302 - Text in input doesn't wrap and become a multi-line string after hitting Shift+Enter
Summary: Text in input doesn't wrap and become a multi-line string after hitting Shift...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-16 15:04 UTC by jonzn4SUSE
Modified: 2024-03-03 04:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Text only on one line (110.55 KB, image/png)
2023-07-16 15:04 UTC, jonzn4SUSE
Details
Previous vsersion can wrap text (206.14 KB, image/png)
2023-07-16 15:35 UTC, jonzn4SUSE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jonzn4SUSE 2023-07-16 15:04:47 UTC
Created attachment 160313 [details]
Text only on one line

SUMMARY
When adding text to an image, I want to have the text wrap to a second line by hitting Shift+Enter.
It doesn't work.


STEPS TO REPRODUCE
1. Take a screenshot
2. Add text
3. Try to have the text wrap to a second line by hitting Shift+Enter.  

OBSERVED RESULT
The text continues on one line.

EXPECTED RESULT
The text should wrap to a second line.



Operating System: openSUSE Tumbleweed 20230714
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.4.2-1-default (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-9850H CPU @ 2.60GHz
Memory: 125.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Manufacturer: HP
Product Name: HP ZBook 17 G6

ADDITIONAL INFORMATION
Comment 1 jonzn4SUSE 2023-07-16 15:35:34 UTC
Created attachment 160315 [details]
Previous vsersion can wrap text

This is a screenshot from openSUSE Leap with the previous version of Spectacle.
Comment 2 Dan Dascalescu 2023-08-08 17:26:19 UTC
Seconding this feature request: there's no way to create multi-line text annotations? This is extremely common for screenshots.

I've tried pressing all combinations of Shift/Ctrl/Alt +Enter and nothing creates a new line.
Comment 3 jonzn4SUSE 2023-08-13 02:25:03 UTC
(In reply to Dan Dascalescu from comment #2)
> Seconding this feature request: there's no way to create multi-line text
> annotations? This is extremely common for screenshots.
> 
> I've tried pressing all combinations of Shift/Ctrl/Alt +Enter and nothing
> creates a new line.

This is not a feature request.  This is something that was take away, but I guess someone is trying to get paid to bring back what was taken away.  ;-/
Comment 4 fausto.nunez@mailbox.org 2023-10-16 10:19:22 UTC
Seeing the same bug on my setup:
```
 ~ => spectacle --version
spectacle 23.08.1
 ~ => plasmashell --version
plasmashell 5.27.8
```
Comment 5 Hugo Ortega_H 2023-11-04 15:44:51 UTC
I just upgraded my Linux distribution and came here to see if someone had reported the problem.

Also, there is no way to put a background color in the text, something that was possible in previous versions. But maybe this should be another issue report.

Aside from that, I really liked the new UI. Thanks.
Comment 6 Bug Janitor Service 2024-01-31 01:21:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/325
Comment 7 Noah Davis 2024-01-31 01:23:34 UTC
Git commit 88c91418f76d70d17e87ddd7a6397b991705cb1c by Noah Davis.
Committed on 31/01/2024 at 01:22.
Pushed by ndavis into branch 'master'.

Add support for new lines and tabstops in text annotations

You can now add a new line to a block of text by pressing Enter/Return.

Tabstops are 8 'x' characters wide (QPainter default).
Related: bug 448491

M  +15   -1    src/Gui/Annotations/TextTool.qml
M  +4    -2    src/Gui/Annotations/Traits.cpp

https://invent.kde.org/graphics/spectacle/-/commit/88c91418f76d70d17e87ddd7a6397b991705cb1c
Comment 8 jonzn4SUSE 2024-03-03 03:59:15 UTC
When will we see this fix? 


Operating System: openSUSE Tumbleweed 20240301
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Kernel Version: 6.7.6-1-default (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5825U with Radeon Graphics
Memory: 62.1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: HP
Product Name: HP ProBook 455 15.6 inch G9 Notebook PC
Comment 9 Noah Davis 2024-03-03 04:35:17 UTC
(In reply to jonzn4SUSE from comment #8)
> When will we see this fix?

Next release, but I'm not sure when that will be. Normally I'd check https://community.kde.org/Schedules, but it doesn't seem to have the info I want. My guess is June or August.