Add support for new lines and tabstops in text annotations

You can now add a new line to a block of text by pressing Enter/Return.

Tabstops are 8 'x' characters wide (QPainter default).

BUG: 472302
BUG: 448491